feat: setParams 검증 로직 추가